--- a/index.html
+++ b/index.html
@@ -15,17 +15,12 @@
 
         <div class="input-km">
             <label for="km">Km da percorrere</label>
-            <input type="text" id="km">
+            <input type="number" id="km">
         </div>
 
         <div class="input-age">
-            <label for="color">Fascio di età</label>
-            <select id="color">
-                <option value=""></option>
-                <option value="maggiorenne">Maggiorenne</option>
-                <option value="minorenne">Minorenne</option>
-                <option value="anziano">Anziano</option>
-            </select>
+            <label for="age">Fascio di età</label>
+            <input type="number" id="age">
         </div>
 
         <div class="buttons">
@@ -33,6 +28,8 @@
             <button id="clear">Annulla</button>
         </div>
     </section>
+
+   <div class="price"></div>
    
 
     <script src="js/script.js"></script>
