add js funzionante

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="module">
         <div class="input-name">
             <label for="name">Nome utente</label>
-            <input type="text" id="name">
+            <input type="text" id="username">
         </div>
 
         <div class="input-km">
@@ -19,7 +19,7 @@
         </div>
 
         <div class="input-age">
-            <label for="age">Fascio di età</label>
+            <label for="age">Età</label>
             <input type="number" id="age">
         </div>
 
