--- a/index.html
+++ b/index.html
@@ -1,37 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Biglietto Hogwarts Express</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.cdnfonts.com/css/harry-potter" rel="stylesheet">
+
 </head>
+
 <body>
-    <section class="module">
-        <div class="input-name">
-            <label for="name">Nome utente</label>
-            <input type="text" id="username">
-        </div>
 
-        <div class="input-km">
+    <div class="content ">
+
+        <form id="ticket-form" class="ticket-form">
+            <h1>Ottieni il tuo Biglietto per Hogwarts </h1>
+            <div class="flex">
+                <div class="input-name">
+                    <label for="username">Nome</label>
+                    <input type="text" id="username" required>
+                </div>
+                <div class="input-age">
+                    <label for="age">Età</label>
+                    <input type="number" id="age" required>
+                </div>
+            </div>
+            <div class="flex">
+                <div class="input-start-station">
+                    <label for="start-station">Stazione di partenza</label>
+                    <input type="text" id="start-station" required>
+                </div>
+            </div>
+            <div class="flex">
+                <div class="input-date">
+                    <label for="date">Data di partenza</label>
+                    <input type="date" id="date" required>
+                </div>
+
+                <div class="input-time">
+                    <label for="time">Ora di partenza</label>
+                    <input type="time" id="time" required>
+                </div>
+            </div>
+
+
+            <!-- <div class="input-km">
             <label for="km">Km da percorrere</label>
-            <input type="number" id="km">
-        </div>
+            <input type="number" id="km" required>
+        </div> -->
 
-        <div class="input-age">
-            <label for="age">Età</label>
-            <input type="number" id="age">
-        </div>
 
-        <div class="buttons">
-            <button id="send">Genera</button>
-            <button id="clear">Annulla</button>
-        </div>
-    </section>
+            <div class="buttons">
+                <button type="submit" id="send">Genera</button>
+                <button type="button" id="clear">Annulla</button>
+            </div>
+        </form>
 
-   <div class="price"></div>
-   
+
+        <div class="ticket">
+            <!-- Contenuto del biglietto verrà generato dinamicamente qui -->
+        </div>
+    </div>
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
